--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
-title: Game Developer
-email: your-email@domain.com
+title: Game Programmer
+email: luualex23@gmail.com
 description: > # keep this and put description below
-  Programmer and Designer
+  Programmer 
 url: "https://yourdomain.com" # the base hostname & protocol for your site
-linkedin_url: "https://www.linkedin.com/in/gamingportfolio"
-github_username: gamingportfolio
-twitter_username: gamingportfolio
+linkedin_url: "https://www.linkedin.com/in/alex-luu-71343725a"
+github_username: alexluu597
 footer_text: "This site uses <a href='https://github.com/gamingportfolio/urban-theme-portfolio'>urban-theme (portfolio)</a>."
 
 # Build settings
