--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: Game Programmer
+title: Alex Luu
 email: luualex23@gmail.com
 description: > # keep this and put description below
-  Programmer 
-url: "https://yourdomain.com" # the base hostname & protocol for your site
+  Game Programmer 
+url: "https://alexluu597.github.io" # the base hostname & protocol for your site
 linkedin_url: "https://www.linkedin.com/in/alex-luu-71343725a"
 github_username: alexluu597
 footer_text: "This site uses <a href='https://github.com/gamingportfolio/urban-theme-portfolio'>urban-theme (portfolio)</a>."
