--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Alex Luu
 email: luualex23@gmail.com
 description: > # keep this and put description below
-  Game Programmer 
+  Game Programmer and Developer
 url: "https://alexluu597.github.io" # the base hostname & protocol for your site
 linkedin_url: "https://www.linkedin.com/in/alex-luu-71343725a"
 github_username: alexluu597
